# backend-ops-agent-lab

./: .env.example  .gitignore  README.md  docker-compose.yml
docs/runbooks/: incident_429.md  service_timeout.md
scripts/: dev-up.ps1  ingest_docs.py  smoke-test.ps1
services/agent-app/: Dockerfile  pyproject.toml
services/agent-app/app/: config.py  dependencies.py  main.py
services/agent-app/app/adapters/: mock_api_client.py  ollama_client.py  qdrant_client.py
services/agent-app/app/api/: routes.py
services/agent-app/app/domain/: agent_service.py  models.py  ports.py
services/agent-app/tests/: conftest.py  test_agent_service.py  test_app_smoke.py
services/mock-api/: Dockerfile  pyproject.toml
services/mock-api/app/: config.py  main.py
services/mock-api/app/api/: routes.py
