[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mock-api"
version = "0.1.0"
description = "Mock API service for backend ops agent lab"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.95",
    "uvicorn[standard]>=0.22",
    "pydantic-settings>=0.1.0",
]

[tool.pytest.ini_options]
pythonpath = ["app"]